<resources>
    <string name="app_name">JasaKarya</string>

    <string name="sign_up">Sign Up</string>
    <string name="text_choose_package">Pilih Paket yang diinginkan :</string>
    <string name="detail_description">Temukan gaya unik dan kreativitas dalam desain kaos kami yang penuh ilustrasi memikat Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="bullet_span_text">Desain Kaos Ilustrasi Kustom (3 Desain) Tiga revisi desain Pengiriman format digital high resolution Bonus: Sesi konsultasi desain selama 1 jam Diskon 10% untuk pembelian desain tambahan</string>
    <string name="imageview_login">Image Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="icon_username">Icon Username</string>
    <string name="ib_back">Button Back</string>
    <string name="icon_password">Icon Password</string>

    <string name="tv_cart">Cart</string>
    <string name="btn_buat_pesanan">Buat Pesanan</string>
    <string name="iv_product">IV Cart</string>
    <string name="name_product">Desain Kaos Ilustrasi</string>
    <string name="tv_category">Paket: Endorse Post/Story dan augmentasi</string>
    <string name="tv_price">Rp. 150.000.-</string>
    <string name="btn_fav">Button Favorite</string>
    <string name="tv_payment">Payment</string>
    <string name="btn_pay">Pembayaran</string>
    <string name="tv_detail_pemesanan">Detail Pemesanan</string>
    <string name="btn_check">Chekclist</string>
    <string name="ic_estimasi">Icon Estimasi</string>
    <string name="tv_status">Status</string>
    <string name="tv_ongoing">Ongoing</string>
    <string name="ic_status">Icon Status</string>
    <string name="tv_estimasi">Estimasi</string>
    <string name="tv_hari">3 Hari</string>
    <string name="ic_line">Line</string>
    <string name="tv_detail_pembayaran">Detail Pembayaran</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="tv_barang">1 Barang</string>
    <string name="tv_harga">Harga</string>
    <string name="tv_disk">Diskon</string>
    <string name="tv_diskon">0</string>
    <string name="tv_total">Total</string>
    <string name="skip">SKIP</string>
    <string name="get_started">GET STARTED</string>

    <string name="jasakarya">Jasa Karya</string>
    <string name="logo_jasakarya">Logo Jasa Karya</string>

    <string name="image_kreativitas">Image Kreativitas</string>
    <string name="image_branding">Image Branding</string>
    <string name="image_community">Image Community</string>

    <string name="title_menu_1">Kreativitas</string>
    <string name="title_menu_2">Branding</string>
    <string name="title_menu_3">Community</string>

    <string name="desc_menu_1">Tunjukkan kreativitasmu kepada dunia. Dapatkan dukungan dari kolektor design dan bangun reputasi sebagai kreator handal.</string>
    <string name="desc_menu_2">Jual karya kreatifmu di sini dan biarkan dunia menikmati keunikanmu! Bergabunglah sekarang untuk membuka peluang baru di dunia kreativitas.</string>
    <string name="desc_menu_3">Temukan komunitas kreatif di sini! Bergabunglah bersama desainer dari berbagai latar belakang untuk berbagi ide, inspirasi, dan dukungan. Jelajahi kreativitas bersama kami.</string>

    <string name="register">Daftar</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_email">Email</string>
    <string name="text_fullname">Nama Lengkap</string>
    <string name="text_location">Alamat</string>
    <string name="text_already_registered">Anda sudah mendaftar?</string>
    <string name="text_login">Masuk</string>
    <string name="text_signup">Daftar</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="choose_category_text">Pilih 3 kategori yang kamu suka...</string>
    <string name="brochure">Brosur</string>
    <string name="poster">Poster</string>
    <string name="merchandise">Merchandise</string>
    <string name="logo">Logo</string>
    <string name="infographics">Infografis</string>
    <string name="presentation">Presentasi</string>
    <string name="interior">Interior</string>
    <string name="ui_ux_design">UI / UX Design</string>
    <string name="ilustrastion">Ilustrasi</string>
    <string name="copy_writing">Copywriting</string>
    <string name="next_to_home_text">Simpan Preferensi</string>
    <string name="tv_checkout">Checkout</string>
    <string name="tv_metode_pembayaran">Metode Pembayaran :</string>
    <string name="tv_keranjang">Keranjang</string>
    <string name="tv_favorite">Favorit</string>
    <string name="tv_status_pembelian">Status Pembelian</string>
    <string name="tv_onprogress">On Progress</string>
    <string name="tv_selesai">Selesai</string>
    <string name="tv_detail">Detail</string>
    <string name="tv_review">Review</string>
    <string name="rating_produk">Berikan Rating Produk ini</string>
    <string name="tv_berikan_ulasan">Bagaimana Pendapatmu dengan Produk Ini?</string>
    <string name="masukkan_ulasan">Masukkan Ulasan</string>
    <string name="btn_upload">Upload</string>
    <string name="iv_gopay">Payment GoPay</string>
    <string name="iv_atmbersama">Payment ATM Bersama</string>
    <string name="iv_linkaja">Payment LinkAja</string>
    <string name="iv_dana">Paymnet Dana</string>
    <string name="btn_addcart">Button Add Cart</string>
    <string name="tv_profile">Profile</string>
    <string name="tv_username">Username</string>
    <string name="tv_email">email@email.com</string>
    <string name="logout">Logout</string>
    <string name="btn_logout">Logout</string>
    <string name="personal">Data Pribadi</string>
    <string name="name">Nama :</string>
    <string name="tanggal">Tanggal Lahir :</string>
    <string name="tanggallahir">01/01/0001</string>
    <string name="jeniskelamin">Jenis Kelamin :</string>
    <string name="value_jeniskelamin">Laki-laki</string>
    <string name="alamat">Alamat :</string>
    <string name="value_alamat">Jl. Rumah Belok Simpang Dua</string>
    <string name="fotovideografi">Foto/Videografi</string>
    <string name="desain_ilustrasi">Desain Grafis</string>
    <string name="kontenmedsos">Konten Media Sosial</string>
    <string name="animasi">3D dan Animasi</string>
    <string name="musiksuara">Musik dan Sound</string>
    <string name="penulisankreatif">Penulisan Kreatif</string>
    <string name="pemasaraninternet">Pemasaran Internet</string>
    <string name="tv_note">Catatan</string>
    <string name="btn_bayar">Bayar</string>
    <string name="tv_transaksi">Transaksi</string>
    <string name="tv_tanggal_pemesanan">Tanggal Pesan:</string>
    <string name="tv_tanggal">1/1/1970 06:30</string>
    <string name="tv_email_customer">Email Customer:</string>
    <string name="tv_id_transaksi">No Transaksi:</string>
    <string name="tv_id">emailemail@gmail.com-6-010119700630</string>
    <string name="tv_metode">Dana</string>
    <string name="tv_note_detail">"Lorem ipsum dolor sit amet adipiscing elit lorem lorem ipsum ipsum "</string>
    <string name="btn_selesai">Selesai\n</string>
    <string name="btn_pesanan_selesai">Lihat Pesanan Selesai</string>
    <string name="tv_transaksi_selesai">Transaksi Selesai</string>


</resources>