<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/tv_profile"
        android:textColor="#279EFF"
        android:textSize="24sp"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:background="@color/black"
        android:src="@drawable/gambar_review"
        android:layout_marginTop="20dp"
        app:shapeAppearanceOverlay="@style/RoundedCut"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/tv_username"
        android:textColor="#279EFF"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_profile" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/tv_email"
        android:textColor="#279EFF"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />

    <TextView
        android:id="@+id/tv_personal"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="10dp"
        android:paddingTop="5dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        android:text="@string/personal"
        android:background="@color/navy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_navy"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18sp"
        android:text="@string/name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_personal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_fullname"/>

    <TextView
        android:id="@+id/tv_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_navy"
        android:fontFamily="@font/poppins_medium"
        android:textSize="18sp"
        android:text="@string/text_fullname"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintBottom_toTopOf="@id/tv_tanggal"/>

    <TextView
        android:id="@+id/tv_tanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_navy"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18sp"
        android:text="@string/tanggal"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_fullname"
        app:layout_constraintBottom_toTopOf="@id/tv_tanggallahir"/>

    <TextView
        android:id="@+id/tv_tanggallahir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_navy"
        android:fontFamily="@font/poppins_medium"
        android:textSize="18sp"
        android:text="@string/tanggallahir"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tv_fullname"
        app:layout_constraintTop_toBottomOf="@id/tv_tanggal"
        app:layout_constraintBottom_toTopOf="@id/tv_jk" />

    <TextView
        android:id="@+id/tv_jk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_navy"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18sp"
        android:text="@string/jeniskelamin"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/tv_tanggal"
        app:layout_constraintTop_toBottomOf="@id/tv_tanggallahir"
        app:layout_constraintBottom_toTopOf="@id/tv_jeniskelamin"/>

    <TextView
        android:id="@+id/tv_jeniskelamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_navy"
        android:fontFamily="@font/poppins_medium"
        android:textSize="18sp"
        android:text="@string/value_jeniskelamin"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tv_tanggallahir"
        app:layout_constraintTop_toBottomOf="@id/tv_jk"/>

    <TextView
        android:id="@+id/tv_alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_navy"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18sp"
        android:text="@string/alamat"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/tv_jk"
        app:layout_constraintTop_toBottomOf="@id/tv_jeniskelamin"
        app:layout_constraintBottom_toTopOf="@id/tv_address" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_navy"
        android:fontFamily="@font/poppins_medium"
        android:textSize="18sp"
        android:text="@string/value_alamat"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tv_jeniskelamin"
        app:layout_constraintTop_toBottomOf="@id/tv_alamat" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="14sp"
        android:text="@string/btn_logout"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_address" />

</androidx.constraintlayout.widget.ConstraintLayout>