<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.category.CategoryActivity">


    <TextView
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/choose_category_text"
        android:textAlignment="center"
        android:textColor="@color/dark_navy"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_brochure"
                style="@style/CustomChip"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="8dp"
                android:text="@string/brochure"
                android:textAlignment="center"
                app:chipCornerRadius="40dp"
                app:chipStrokeWidth="0dp"
                android:elevation="8dp"
                app:checkedIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_poster"
                style="@style/CustomChip"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/poster"
                android:textAlignment="center"
                app:chipCornerRadius="40dp"
                app:chipStrokeWidth="0dp"
                android:elevation="8dp"
                app:checkedIconVisible="false"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_merch"
                style="@style/CustomChip"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:layout_marginTop="4dp"
                android:text="@string/merchandise"
                android:textAlignment="center"
                app:chipCornerRadius="40dp"
                app:chipStrokeWidth="0dp"
                android:elevation="8dp"
                app:checkedIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_logo"
                style="@style/CustomChip"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="4dp"
                android:text="@string/logo"
                android:textAlignment="center"
                app:chipCornerRadius="40dp"
                app:chipStrokeWidth="0dp"
                android:elevation="8dp"
                app:checkedIconVisible="false"
                app:layout_constraintEnd_toStartOf="@id/chip_infographics"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chip_merch" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_infographics"
                style="@style/CustomChip"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:text="@string/infographics"
                android:textAlignment="center"
                app:chipCornerRadius="40dp"
                app:chipStrokeWidth="0dp"
                android:elevation="8dp"
                app:checkedIconVisible="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/chip_logo"
                app:layout_constraintTop_toBottomOf="@id/chip_merch" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_presentation"
                style="@style/CustomChip"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="40dp"
                android:text="@string/presentation"
                android:textAlignment="center"
                app:chipCornerRadius="40dp"
                app:chipStrokeWidth="0dp"
                android:elevation="8dp"
                app:checkedIconVisible="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/chip_interior"
                app:layout_constraintTop_toBottomOf="@id/chip_logo" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_interior"
                style="@style/CustomChip"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:text="@string/interior"
                android:textAlignment="center"
                app:chipCornerRadius="40dp"
                app:chipStrokeWidth="0dp"
                android:elevation="8dp"
                app:checkedIconVisible="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/chip_presentation"
                app:layout_constraintTop_toBottomOf="@id/chip_logo" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_ui"
                style="@style/CustomChip"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:layout_marginEnd="90dp"
                android:layout_marginTop="4dp"
                android:text="@string/ui_ux_design"
                android:textAlignment="center"
                app:chipCornerRadius="40dp"
                app:chipStrokeWidth="0dp"
                android:elevation="8dp"
                app:checkedIconVisible="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chip_presentation" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_illustration"
                style="@style/CustomChip"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="4dp"
                android:elevation="4dp"
                android:text="@string/ilustrastion"
                android:textAlignment="center"
                app:checkedIconVisible="false"
                app:chipCornerRadius="40dp"
                app:chipStrokeWidth="0dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_copy_writing"
                style="@style/CustomChip"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="16dp"
                android:elevation="8dp"
                android:text="@string/copy_writing"
                android:textAlignment="center"
                app:checkedIconVisible="false"
                app:chipCornerRadius="40dp"
                app:chipStrokeWidth="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/chip_illustration"
                app:layout_constraintTop_toBottomOf="@id/chip_ui" />



    </com.google.android.material.chip.ChipGroup>


    <Button
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/ubuntu_regular"
        android:paddingEnd="20dp"
        android:text="@string/next_to_home_text"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.25"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>